attr bug fix on save, functionality added to main show view

--- a/app/views/refinery/recommendations/admin/recommendations/_form.html.erb
+++ b/app/views/refinery/recommendations/admin/recommendations/_form.html.erb
@@ -5,39 +5,33 @@
 
   
   <div class='field'>
-    <%= f.label :name -%>
+    <%= f.label "Recommender's Name" -%>
     <%= f.text_field :name, :class => 'larger widest'  -%>
-
   </div>
   
   <div class='field'>
-    <%= f.label :role -%>
+    <%= f.label "Job Role" -%>
     <%= f.text_field :role  -%>
-
   </div>
   
   <div class='field'>
     <%= f.label :company -%>
     <%= f.text_field :company  -%>
-
   </div>
   
   <div class='field'>
     <%= f.label :company_url -%>
     <%= f.text_field :company_url  -%>
-
   </div>
   
   <div class='field'>
     <%= f.label :source_url -%>
     <%= f.text_field :source_url  -%>
-
   </div>
   
   <div class='field'>
     <%= f.label :publish_date -%>
     <%= f.datetime_select :publish_date  -%>
-
   </div>
   
   <div class='field'>
