assets included in generator

--- a/app/views/refinery/recommendations/recommendations/_latest.html.erb
+++ b/app/views/refinery/recommendations/recommendations/_latest.html.erb
@@ -1,5 +1,5 @@
 <aside>
-  <nav id="recent_recommendations">
+  <nav id="latest_recommendations">
     <h2><%= t('.other') %></h2>
     <ul id="recommendations">
       <% @recommendations.each do |recommendation| %>
