--- a/app/views/refinery/recommendations/recommendations/index.html.erb
+++ b/app/views/refinery/recommendations/recommendations/index.html.erb
@@ -1,11 +1,9 @@
 <% content_for :body_content_left do %>
-  <ul id="recommendations">
-    <% @recommendations.each do |recommendation| %>
-      <li>
-        <%= link_to recommendation.name, refinery.recommendations_recommendation_path(recommendation) %>
-      </li>
+  <div class="recommendations">
+    <% @recommendations.each do |rec| %>
+         <%= render 'item', :recommendation => rec %>
     <% end %>
-  </ul>
+  </div>
 <% end %>
 
 <%= render '/refinery/content_page' %>
