--- a/app/views/refinery/recommendations/recommendations/show.html.erb
+++ b/app/views/refinery/recommendations/recommendations/show.html.erb
@@ -19,13 +19,7 @@
 
 
 <% content_for :body do %>
-  <article class="recommendation_item">
-      <small><%= l(@recommendation.publish_date, :format => :long) %></small>
-    <% if @recommendation.source_url.present? %>
-        <small><%= link_to "Orginal source link", @recommendation.source_url %></small>
-    <% end %>  
-    
-    <%= @recommendation.description.html_safe %>
+     <%= render 'item', :recommendation => @recommendation %>
 
     <p>
       <%= link_to t('.back_to_index'), refinery.recommendations_recommendation_path %>
@@ -33,14 +27,7 @@
         
     <%#=raw @recommendation.youtube_id %>
 
-</article>
 <% end %>
-
-<% content_for :body_content_right do %>
-
-<% end %>
-
-<%# content_for :side_body, render(:partial => 'latest') %>
 
 <%= render '/refinery/content_page' %>
 
