--- a/app/views/refinery/recommendations/recommendations/_items.html.erb
+++ b/app/views/refinery/recommendations/recommendations/_items.html.erb
@@ -1,16 +1,10 @@
 <% content_for :body_content_left do %>
   <div class="recommendations">
-    <%= render 'item', :recommendation => @recommendation %>
-    <% @other_recommendations.each do |rec| %>
+    <% @recommendations.each do |rec| %>
          <%= render 'item', :recommendation => rec %>
     <% end %>
   </div>
 <% end %>
-<%= render '/refinery/content_page' %>
-
-
-
-
 
 
 
